crates/reinhardt-pages/tests/ui/client_form/choices/fail/missing_default.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, PartialEq, ClientFormChoices)]
enum ProviderMode {
	Fake,
	Live,
}

fn main() {}
